--- a/loop/css/footer.css
+++ b/loop/css/footer.css
@@ -1,10 +1,13 @@
 .footer-div{
-	margin-top:5px;
+	margin-top:15px;
 }
 .scan-links{
-	margin-top:5px;
+	margin-top:15px;
 	text-align:right;
 }
 p{
 	line-height: 10px;
+	padding-right:2px;
+	padding-top:10px;
+	/*color:#ffffff;*/
 }
