--- a/loop/css/programs.css
+++ b/loop/css/programs.css
@@ -29,6 +29,7 @@ a.prog-name:hover{
 	text-indent: 2em;
 	padding-left: 35px;
 	padding-right: 35px;
+	font-family:'Myriad Pro','FZLTH_GB18030',"Microsoft YaHei","STHeiti-Light","SimSun";
 }
 .large-img{
 	width: 700px;
