--- a/loop/css/skeleton.css
+++ b/loop/css/skeleton.css
@@ -25,6 +25,8 @@
 	border-right: 2px solid #265ea5;
 
 	font-weight: bold;
+	font-family:'Myriad Pro','FZLTH_GB18030',"Microsoft YaHei","STHeiti-Light","SimSun";
+
 	/*background-image: linear-gradient(0deg, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 50%, rgba(255,255,255,0) 51%);*/
 }
 .navBtn:hover{
