--- a/loop/css/skeleton.css
+++ b/loop/css/skeleton.css
@@ -24,10 +24,8 @@
 	font-size: 18px;
 	border-right: 2px solid #265ea5;
 
-	font-weight: bold;
+	/*font-weight: 500;*/
 	font-family:'Myriad Pro','FZLTH_GB18030',"Microsoft YaHei","STHeiti-Light","SimSun";
-
-	/*background-image: linear-gradient(0deg, rgba(255,255,255,0.5) 0%, rgba(255,255,255,0) 50%, rgba(255,255,255,0) 51%);*/
 }
 .navBtn:hover{
 	background-color: #b3b3b3;
