--- a/loop/css/programs.css
+++ b/loop/css/programs.css
@@ -1,3 +1,6 @@
+body{
+	font-family:'Myriad Pro','FZLTH_GB18030',"Microsoft YaHei","STHeiti-Light","SimSun";
+}
 .nav-pills .nav-link.active, .nav-pills .show>.nav-link{
 	background: rgb(66, 67, 68, 0.4);
 	color: white;
@@ -27,7 +30,9 @@
 a.prog-name:hover{
 	border-bottom: 1px solid black;
 }
-
+.prog-content h3{
+	margin-bottom: 15px;
+}
 .prog-content p{
 	text-indent: 2em;
 	padding-left: 35px;
@@ -37,4 +42,8 @@ a.prog-name:hover{
 .large-img{
 	width: 700px;
 	margin-left: 65px;
+	margin-bottom: 15px;
+}
+.prog-content h6{
+	color: grey;
 }
